# auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0d4220b5c2ff_initial_migration.py  55ede0d9a9db_用户表初始化.py  893acf55ec33_增加用户备注字段.py  ed8f942dabd6_initial_migration.py
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 3afb7dc0c8f0_initial_migration_create_core_users_and_.py
src/api/: deps.py  service.py
src/api/routers/: admin.py  auth.py  chat_sessions.py  health.py  users.py
src/core/: config.py  database.py  logging.py  security.py
src/models/: __init__.py  base.py  chat_session.py  user.py
src/schemas/: auth.py  chat_session.py  user.py
tests/: conftest.py  test_auth.py  test_chat_sessions.py  test_health.py  test_security.py  test_users.py
