[project]
name = "fyzj-core"
version = "0.1.0"
description = "方圆智版 AI 身份中枢 (FastAPI + SQLModel + PostgreSQL)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi ~=0.115.5",
    "uvicorn ~=0.32.1",
    "pydantic ~=2.10.0",
    "pydantic-settings ~=2.6.0",
    "sqlmodel ~=0.0.22",
    "alembic ~=1.14.0",
    "psycopg[binary,pool] ~=3.2.4",
    "PyJWT >=2.10.0",
    "passlib[bcrypt] >=1.7.4",
    "python-dotenv ~=1.0.1",
    "python-multipart >=0.0.17",
    "email-validator >=2.2.0",
    "sqladmin",
    "httpx",
    "itsdangerous",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "U"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
